--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+.gitignore~
 check1 check2 check3 check4 check5 check6
 output1.txt output2.txt output3.txt output4.txt output5.txt output6.txt
 test1 test2 test3 test4 test5 test6
